[gd_scene load_steps=46 format=3 uid="uid://cholc1afgl13v"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bsy6h"]
[ext_resource type="Resource" path="res://Movement Data/DefaultMovementData.tres" id="2_krynv"]
[ext_resource type="PackedScene" uid="uid://7gk6qxaw8bqp" path="res://Scenes/ghost.tscn" id="3_1bcuk"]
[ext_resource type="Texture2D" uid="uid://cxr5wuw4daeva" path="res://Sprites/Player/player_jump.png" id="4_a8s05"]
[ext_resource type="Texture2D" uid="uid://dakpdncwuslua" path="res://Sprites/cmnt death.png" id="4_jnhbv"]
[ext_resource type="Texture2D" uid="uid://wl0qto1ulxx8" path="res://Sprites/Player/player.png" id="5_7r7g3"]
[ext_resource type="Texture2D" uid="uid://cs00q3pyg0vfs" path="res://Sprites/Player/player_run.png" id="6_y6rho"]
[ext_resource type="Texture2D" uid="uid://bejrulipwma7q" path="res://Sprites/dash_arrow.png" id="7_5bj17"]
[ext_resource type="Texture2D" uid="uid://b0how0v2aq3dh" path="res://Sprites/dash_arrow_refresh.png" id="8_cvjxe"]
[ext_resource type="Script" path="res://Scenes/Arrow.gd" id="8_yrrbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ce5q3"]
atlas = ExtResource("4_jnhbv")
region = Rect2(0, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f68se"]
atlas = ExtResource("4_jnhbv")
region = Rect2(53, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifk65"]
atlas = ExtResource("4_jnhbv")
region = Rect2(106, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bymvh"]
atlas = ExtResource("4_jnhbv")
region = Rect2(159, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr458"]
atlas = ExtResource("4_jnhbv")
region = Rect2(212, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4aeq"]
atlas = ExtResource("4_jnhbv")
region = Rect2(265, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwua"]
atlas = ExtResource("4_jnhbv")
region = Rect2(318, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp050"]
atlas = ExtResource("4_jnhbv")
region = Rect2(371, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fupl"]
atlas = ExtResource("4_jnhbv")
region = Rect2(424, 0, 53, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu3vi"]
atlas = ExtResource("4_a8s05")
region = Rect2(22, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5rty"]
atlas = ExtResource("5_7r7g3")
region = Rect2(0, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgfjq"]
atlas = ExtResource("6_y6rho")
region = Rect2(88, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc6j1"]
atlas = ExtResource("6_y6rho")
region = Rect2(110, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjryy"]
atlas = ExtResource("6_y6rho")
region = Rect2(198, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tvdh"]
atlas = ExtResource("4_a8s05")
region = Rect2(0, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_7076x"]
atlas = ExtResource("6_y6rho")
region = Rect2(22, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_h32qm"]
atlas = ExtResource("6_y6rho")
region = Rect2(44, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd64s"]
atlas = ExtResource("6_y6rho")
region = Rect2(66, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_pedgi"]
atlas = ExtResource("6_y6rho")
region = Rect2(88, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5715"]
atlas = ExtResource("6_y6rho")
region = Rect2(110, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydkfm"]
atlas = ExtResource("6_y6rho")
region = Rect2(132, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xi6n"]
atlas = ExtResource("6_y6rho")
region = Rect2(154, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_24gn4"]
atlas = ExtResource("6_y6rho")
region = Rect2(176, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_wypna"]
atlas = ExtResource("6_y6rho")
region = Rect2(198, 0, 22, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xuh0"]
atlas = ExtResource("6_y6rho")
region = Rect2(0, 0, 22, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0lcu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce5q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f68se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifk65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bymvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr458")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4aeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fupl")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu3vi")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5rty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgfjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc6j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjryy")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tvdh")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7076x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h32qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd64s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pedgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5715")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydkfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xi6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24gn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wypna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xuh0")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ddcb"]
radius = 8.5
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcnhf"]
size = Vector2(13, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_klhi2"]
atlas = ExtResource("7_5bj17")
region = Rect2(64, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_i33gu"]
atlas = ExtResource("7_5bj17")
region = Rect2(32, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_iff7g"]
atlas = ExtResource("8_cvjxe")
region = Rect2(0, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7o12"]
atlas = ExtResource("8_cvjxe")
region = Rect2(32, 0, 32, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cihk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klhi2")
}],
"loop": true,
"name": &"dashed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i33gu")
}],
"loop": true,
"name": &"dashing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iff7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7o12")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_r7ksk"]
offsets = PackedFloat32Array(0, 0.518072)
colors = PackedColorArray(0.329158, 0.329158, 0.329158, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_50nbg"]
gradient = SubResource("Gradient_r7ksk")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 2.0
script = ExtResource("1_bsy6h")
movement_data = ExtResource("2_krynv")
ghost_node = ExtResource("3_1bcuk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16)
process_callback = 0
limit_left = 0
limit_right = 7000
limit_bottom = 360
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_as_relative = false
position = Vector2(0, 1.534)
sprite_frames = SubResource("SpriteFrames_k0lcu")
animation = &"fall"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -11)
shape = SubResource("CapsuleShape2D_4ddcb")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RingDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RingDetector"]
position = Vector2(0.5, -11)
shape = SubResource("CapsuleShape2D_4ddcb")

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0.5, -11)
shape = SubResource("RectangleShape2D_fcnhf")

[node name="Arrow" type="AnimatedSprite2D" parent="."]
z_index = 5
z_as_relative = false
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_5cihk")
frame = 1
frame_progress = 1.0
offset = Vector2(50, 0)
script = ExtResource("8_yrrbb")

[node name="Center" type="Node2D" parent="."]
position = Vector2(0, -11)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -6)
color = Color(0.0156863, 1, 0, 1)
range_z_min = 2
range_z_max = 4
range_layer_max = 1
texture = SubResource("GradientTexture2D_50nbg")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="area_entered" from="RingDetector" to="." method="_on_ring_detector_area_entered"]
[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
